--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "colors": "^1.3.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1" 
+    "nodemon": "^1.19.1"
   },
   "scripts": {
     "start": "node index.js",
