--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "colors": "^1.3.3",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "morgan": "^1.9.1"
   },
